k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsgogaming
  labels:
    app: letsgogaming
spec:
  selector:
    app: letsgogaming
  ports:
    - name: http
      port: 80
      targetPort: 8080
